# goatbreeder

./: .gitignore  .gitmodules  Makefile  README.md
practice_rust_project/: Makefile  main
practice_rust_project/ccall/: Cargo.toml  ccall
practice_rust_project/ccall/src/: goat.rs  main.rs
practice_rust_project/game/: Cargo.toml
practice_rust_project/guessing_game/: Cargo.toml  Cargo.toml~
practice_rust_project/guessing_game/src/: main.rs  main.rs~
practice_rust_project/heelo_cargo/: Cargo.toml
practice_rust_project/hello_cargo/: Cargo.toml
practice_rust_project/new-project/: Cargo.toml
src/ccall/: Cargo.toml  build.rs  rust-toolchain
src/ccall/.cargo/: config.toml
src/ccall/resources/: display_config.ron  input.ron  prefab.ron
src/ccall/src/: goat.rs  goat_game.rs  main.rs
src/ccall/src/systems/: goats.rs  mod.rs
