[package]
name = "ccall"
version = "0.1.0"
authors = ["pddla <chippermonky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# The default set of optional packages. Most people will want to use these
# packages, but they are strictly optional.
default = ["mac_render"]
mac_render = ["amethyst/metal"]

[dependencies]
libc = "0.2.0"

[profile.dev]
rpath = true
opt-level = 0

[profile.release]
opt-level = 3

[dependencies.amethyst]
version = "0.15"
features = ["metal"]
