[package]
name = "ccall"
version = "0.1.0"
authors = ["pddla <chippermonky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
bevy = { git = "https://github.com/bevyengine/bevy", branch = "master" }
bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", rev = "a6c32978fbd297af3715e5fe5833c83ff36e9aaf" }
rand = "0.7"

[profile.dev]
rpath = true
